--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-    <header class="header">
+    <!-- <header class="header">
         <div class="container header-container">
             <nav class="header-nav nav-container">
                 <a href="./index.html" class="header-logo  link">Web<span class="logo-color">Studio</span></a>
@@ -31,7 +31,7 @@
             </ul>
             </address>
         </div>
-    </header>
+    </header> -->
 
     <main>
 
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-        <section class="projects">
+        <!-- <section class="projects">
             <div class="container">
                 <h2 class="projects-title">What are we doing</h2>
                 <ul class="projects-list list">
@@ -450,7 +450,7 @@
                         <button type="submit" class="popup-form-button">Send</button>
                 </form>
         </div>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
 </body>
