--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                 <li class="projects-item"><img src="./images/img-3.jpg" alt="Our project 3" width="360" height="300"></li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <section class="team">
-            <div class="container">
+            <div class="container container-team">
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
                 <li class="team-item">
@@ -450,7 +450,7 @@
                         <button type="submit" class="popup-form-button">Send</button>
                 </form>
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
 </body>
