--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </section>
 
-        <!-- <section class="projects">
+        <section class="projects">
             <div class="container">
                 <h2 class="projects-title">What are we doing</h2>
                 <ul class="projects-list list">
@@ -95,7 +95,7 @@
                 <li class="projects-item"><img src="./images/img-3.jpg" alt="Our project 3" width="360" height="300"></li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <section class="team">
             <div class="container container-team">
