--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-    <!-- <header class="header">
+    <header class="header">
         <div class="container header-container">
             <nav class="header-nav nav-container">
                 <a href="./index.html" class="header-logo  link">Web<span class="logo-color">Studio</span></a>
@@ -31,7 +31,7 @@
             </ul>
             </address>
         </div>
-    </header> -->
+    </header>
 
     <main>
 
@@ -254,7 +254,7 @@
         </section>
 
         <section class="customers">
-            <div class="container">
+            <div class="container customers-container">
                 <h2 class="customers-title">Customers</h2>
                 <ul class="customers-list list">
                     <li class="customers-item">
