--- a/index.html
+++ b/index.html
@@ -90,9 +90,14 @@
             <div class="container">
                 <h2 class="projects-title">What are we doing</h2>
                 <ul class="projects-list list">
-                <li class="projects-item"><img src="./images/img-2.jpg" alt="Our project 1" width="360" height="300"></li>
-                <li class="projects-item"><img src="./images/img-1.jpg" alt="Our project 2" width="360" height="300"></li>
-                <li class="projects-item"><img src="./images/img-3.jpg" alt="Our project 3" width="360" height="300"></li>
+                <li class="projects-item"><img 
+                    scrset="./images/img-1.jpg 1x, ./images/img-1-2x.jpg 2x" src="./images/img-1.jpg" alt="Our project 1" width="360" height="300"></li>
+                <li class="projects-item"><img 
+                    scrset="./images/img-2.jpg 1x, ./images/img-2-2x.jpg 2x" 
+                    src="./images/img-2.jpg" alt="Our project 2" width="360" height="300"></li>
+                <li class="projects-item"><img 
+                    scrset="./images/img-3.jpg 1x, ./images/img-3-2x.jpg 2x" 
+                    src="./images/img-3.jpg" alt="Our project 3" width="360" height="300"></li>
                 </ul>
             </div>
         </section>
@@ -102,7 +107,7 @@
                 <h2 class="team-title">Our Team</h2>
                 <ul class="team-list list">
                 <li class="team-item">
-                     <img src="./images/img-person-1.jpg" alt="person 1" width="264" height="260">
+                     <img scrset="./images/img-person-1.jpg 1x, ./images/img-person-1-2x.jpg 2x" src="./images/img-person-1.jpg" alt="person 1" width="264" height="260">
                      <div class="team-content">
                         <h3 class="team-name">Mark Guerrero</h3>
                         <p class="team-position">Product Designer</p> 
@@ -139,7 +144,7 @@
                      </div>  
                 </li>
                 <li class="team-item">
-                     <img src="./images/img-person-2.jpg" alt="person 2" width="264" height="260">
+                     <img scrset="./images/img-person-2.jpg 1x, ./images/img-person-2-2x.jpg 2x" src="./images/img-person-2.jpg" alt="person 2" width="264" height="260">
                      <div class="team-content">
                         <h3 class="team-name">Tom Ford</h3>
                         <p class="team-position">Frontend Developer</p>
@@ -176,7 +181,7 @@
                      </div>
                 </li>
                 <li class="team-item">
-                     <img src="./images/img-person-3.jpg" alt="person 3" width="264" height="260">
+                     <img scrset="./images/img-person-3.jpg 1x, ./images/img-person-3-2x.jpg 2x" src="./images/img-person-3.jpg" alt="person 3" width="264" height="260">
                      <div class="team-content">
                         <h3 class="team-name">Camila Garcia</h3>
                         <p class="team-position">Marketing</p>
@@ -213,7 +218,7 @@
                      </div>
                 </li>
                 <li class="team-item">
-                     <img src="./images/img-person-4.jpg" alt="person 4" width="264" height="260">
+                     <img scrset="./images/img-person-4.jpg 1x, ./images/img-person-4-2x.jpg 2x" src="./images/img-person-4.jpg" alt="person 4" width="264" height="260">
                      <div class="team-content">
                         <h3 class="team-name">Daniel Wilson</h3>
                         <p class="team-position">UI Designer</p>
