--- a/index.html
+++ b/index.html
@@ -30,6 +30,55 @@
                 <li><a href="tel:+110001111111"  class="header-address-item  link">+11 (000) 111-11-11</a></li>
             </ul>
             </address>
+
+            <button type="button" class="menu-open-btn">o</button>
+        </div>
+        <div class="mob-menu">
+            <button type="button" class="menu-close-btn">x</button>
+            <ul class="nav-mob-menu">
+                <li class="item-mob-menu list"><a href="./index.html" class="header-mob-link link current">Studio</a></li>
+                <li class="item-mob-menu list"><a href="./portfolio.html" class="header-mob-link link">Portfolio</a></li>
+                <li class="item-mob-menu list"><a href="" class="header-mob-link link">Contacts</a></li>
+            </ul>
+
+            <address class="mob-menu-address">
+                <ul class="mob-address-list list">
+                    <li><a href="tel:+110001111111"  class="mob-phone-item  link">+11 (000) 111-11-11</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="mob-email-item  link">info@devstudio.com</a></li>
+                </ul>
+                </address>
+
+                <ul class="mob-soc-list list">
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">        
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+
         </div>
     </header>
 
