--- a/index.html
+++ b/index.html
@@ -31,10 +31,18 @@
             </ul>
             </address>
 
-            <button type="button" class="menu-open-btn">o</button>
+            <button type="button" class="menu-open-btn">
+                <svg class="menu-open-btn" width="32" height="22">
+                    <use href="./images/icons.svg#icon-menu-open"></use>
+                </svg>
+            </button>
         </div>
         <div class="mob-menu">
-            <button type="button" class="menu-close-btn">x</button>
+            <button type="button" class="menu-close-btn">
+                <svg class="menu-close-btn" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-icon"></use>
+                </svg>
+            </button>
             <ul class="nav-mob-menu">
                 <li class="item-mob-menu list"><a href="./index.html" class="header-mob-link link current">Studio</a></li>
                 <li class="item-mob-menu list"><a href="./portfolio.html" class="header-mob-link link">Portfolio</a></li>
