--- a/index.html
+++ b/index.html
@@ -31,15 +31,16 @@
             </ul>
             </address>
 
-            <button type="button" class="menu-open-btn">
-                <svg class="menu-open-btn" width="32" height="22">
+            <button type="button" class="menu-open-btn" data-menu-open>
+                <svg class="icon-open-btn" width="32" height="22">
                     <use href="./images/icons.svg#icon-menu-open"></use>
                 </svg>
             </button>
         </div>
-        <div class="mob-menu">
-            <button type="button" class="menu-close-btn">
-                <svg class="menu-close-btn" width="8" height="8">
+        <div class="mob-menu" data-menu>
+            <div class="mob-col-1">
+            <button type="button" class="menu-close-btn" data-menu-close>
+                <svg class="icon-close-menu" width="8" height="8">
                     <use href="./images/icons.svg#icon-close-icon"></use>
                 </svg>
             </button>
@@ -48,7 +49,8 @@
                 <li class="item-mob-menu list"><a href="./portfolio.html" class="header-mob-link link">Portfolio</a></li>
                 <li class="item-mob-menu list"><a href="" class="header-mob-link link">Contacts</a></li>
             </ul>
-
+            </div>
+            <div class="mob-col-2">
             <address class="mob-menu-address">
                 <ul class="mob-address-list list">
                     <li><a href="tel:+110001111111"  class="mob-phone-item  link">+11 (000) 111-11-11</a></li>
@@ -86,7 +88,7 @@
                         </a>
                     </li>
                 </ul>
-
+            </div>
         </div>
     </header>
 
@@ -515,5 +517,7 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
+
 </body>
 </html>
