--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,68 @@
                 <li><a href="tel:+110001111111"  class="header-address-item  link">+11 (000) 111-11-11</a></li>
             </ul>
             </address>
+
+            <button type="button" class="menu-open-btn" data-menu-open>
+                <svg class="icon-open-btn" width="32" height="22">
+                    <use href="./images/icons.svg#icon-menu-open"></use>
+                </svg>
+            </button>
         </div>
+
+        <div class="mob-menu" data-menu>
+            <div class="mob-col-1">
+            <button type="button" class="menu-close-btn" data-menu-close>
+                <svg class="icon-close-menu" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-icon"></use>
+                </svg>
+            </button>
+            <ul class="nav-mob-menu">
+                <li class="item-mob-menu list"><a href="./index.html" class="header-mob-link link ">Studio</a></li>
+                <li class="item-mob-menu list"><a href="./portfolio.html" class="header-mob-link link current">Portfolio</a></li>
+                <li class="item-mob-menu list"><a href="" class="header-mob-link link">Contacts</a></li>
+            </ul>
+            </div>
+            <div class="mob-col-2">
+            <address class="mob-menu-address">
+                <ul class="mob-address-list list">
+                    <li><a href="tel:+110001111111"  class="mob-phone-item  link">+11 (000) 111-11-11</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="mob-email-item  link">info@devstudio.com</a></li>
+                </ul>
+                </address>
+
+                <ul class="mob-soc-list list">
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">        
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="mob-soc-item">
+                        <a href="#" class="mob-soc-link link" target="_blank">
+                            <svg class="mob-soc-icon" width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
     </header>
 
     <main>
@@ -228,6 +289,8 @@
 
         </div>
     </footer>
+    
+    <script src="./js/menu.js"></script>
 
 </body>
 </html>
